--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -67,5 +67,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
   }
 }
