--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "typescript": "^4.6.3",
-    "vite": "^2.9.2"
+    "vite": "^2.9.2",
+    "vite-tsconfig-paths": "^3.4.1"
   }
 }
