--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -7,7 +7,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src/**/*.ts src/**/*.tsx",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "stylelint": "npx stylelint \"**/*.scss\"",
+    "stylelint:fix": "npm run stylelint -- --fix"
   },
   "dependencies": {
     "react": "^18.0.0",
@@ -26,6 +28,10 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "sass": "^1.50.0",
+    "stylelint": "^14.6.1",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.2",
     "vite-tsconfig-paths": "^3.4.1"
