--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -7,6 +7,11 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "es2017",
+    "paths": {
+      "~/*": [
+        "./*"
+      ]
+    },
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
