--- a/apps/web-app/.eslintrc
+++ b/apps/web-app/.eslintrc
@@ -35,6 +35,7 @@
     "object-curly-spacing": ["error", "always"],
     "array-bracket-spacing": ["error", "always"],
     "computed-property-spacing": ["error", "always"],
-    "indent": ["error", 2]
+    "indent": ["error", 2],
+    "no-multi-spaces": "error"
   }
 }
