--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -74,6 +74,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
+    "jest-mock-extended": "^2.0.5",
     "prettier": "^2.3.2",
     "prisma": "^3.12.0",
     "source-map-support": "^0.5.20",
