--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -13,7 +13,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build-api:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -38,8 +38,8 @@ jobs:
       - name: UNIT TEST (JEST)
         run: npm test
 
-  deploy:
-    needs: build
+  deploy-api:
+    needs: build-api
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -48,4 +48,19 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
+
+  deploy-web-app:
+    needs: build-api
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Deploy to Vercel Action
+        uses: BetaHuhn/deploy-to-vercel-action@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
