--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -12,6 +12,7 @@
     "stylelint:fix": "npm run stylelint -- --fix"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
