--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -3,9 +3,6 @@
 
 name: Node.js CI/CD
 
-env:
-  DATABASE_URL: postgresql://XXX:1234@localhost:5432/city-hunter-dev?schema=public
-
 on:
   push:
     branches: [ master ]
@@ -13,7 +10,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build-api:
+  ci:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -35,11 +32,17 @@ jobs:
       - name: BUILD APPLICATION
         run: npm run build --if-present
 
+      - name: START DOCKER TEST DATABASE
+        run: npm run docker:up
+
       - name: UNIT TEST (JEST)
-        run: npm test
+        run: npm run test:ci
+
+      - name: STOP DOCKER TEST DATABASE
+        run: npm run docker:down
 
   deploy-api:
-    needs: build-api
+    needs: ci
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -50,7 +53,7 @@ jobs:
           heroku_email: ${{secrets.HEROKU_EMAIL}}
 
   deploy-web-app:
-    needs: build-api
+    needs: [ci, deploy-api]
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
