--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -10,7 +10,8 @@ on:
     branches: [ master ]
 
 jobs:
-  ci:
+  backend-build:
+    name: Backend build
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -25,6 +26,38 @@ jobs:
 
       - name: USE NODEJS ${{ matrix.node-version }} - ${{ matrix.architecture }}
         uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version}}
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
+
+      - name: INSTALL PROJECT DEPENDENCIES (NPM)
+        run: npm ci
+
+      - name: BUILD APPLICATION
+        run: npm run build --if-present
+
+  backend-unit-test:
+    name: Backend Unit test
+    needs: backend-build
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./apps/api
+    strategy:
+      matrix:
+        node-version: [16.x]
+        architecture: [x64]
+    steps:
+      - name: CHECK-OUT GIT REPOSITORY
+        uses: actions/checkout@v2
+
+      - name: USE NODEJS ${{ matrix.node-version }} - ${{ matrix.architecture }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version}}
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
       - name: INSTALL PROJECT DEPENDENCIES (NPM)
         run: npm ci
@@ -42,7 +75,7 @@ jobs:
         run: npm run docker:down
 
   deploy-api:
-    needs: ci
+    needs: backend-unit-test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -53,7 +86,7 @@ jobs:
           heroku_email: ${{secrets.HEROKU_EMAIL}}
 
   deploy-web-app:
-    needs: [ci, deploy-api]
+    needs: [deploy-api]
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
