--- a/apps/api/.env.test
+++ b/apps/api/.env.test
@@ -1,5 +1,6 @@
 # General
-API_URL=http://localhost:8080
+PORT=8888
+API_URL=http://localhost:8888
 WEB_APP_URL="http://localhost:3000"
 
 DATABASE_URL="postgresql://prisma:prisma@localhost:5433/tests"
