--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ master ]
 
+concurrency: 
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
+
 jobs:
   backend-build:
     name: Backend build
