--- a/apps/web-app/.eslintrc
+++ b/apps/web-app/.eslintrc
@@ -36,6 +36,8 @@
     "array-bracket-spacing": ["error", "always"],
     "computed-property-spacing": ["error", "always"],
     "indent": ["error", 2],
-    "no-multi-spaces": "error"
+    "no-multi-spaces": "error",
+    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
   }
 }
