--- a/apps/web-app/.eslintrc
+++ b/apps/web-app/.eslintrc
@@ -37,6 +37,7 @@
     "computed-property-spacing": ["error", "always"],
     "indent": ["error", 2],
     "no-multi-spaces": "error",
+    "no-trailing-spaces": "error",
     "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
   }
