[api, web-app] eslint use single quotes

--- a/apps/web-app/.eslintrc
+++ b/apps/web-app/.eslintrc
@@ -39,6 +39,7 @@
     "no-multi-spaces": "error",
     "no-trailing-spaces": "error",
     "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "quotes": ["error", "single"]
   }
 }
