--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-social-login-buttons": "^3.6.0"
   },
