[web-app, api] created shared folder for common types between FE and BE

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -10,6 +10,9 @@
     "paths": {
       "~/*": [
         "./src/*"
+      ],
+      "#types/*": [
+        "./../shared/types/*"
       ]
     },
     "sourceMap": true,
