--- a/apps/web-app/tsconfig.json
+++ b/apps/web-app/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ESNext"
+    ],
     "allowJs": false,
     "skipLibCheck": false,
     "esModuleInterop": false,
@@ -17,13 +21,19 @@
     "jsx": "react-jsx",
     "paths": {
       "~/*": [
-        "./*"
+        "./src/*"
       ],
-      "@/*": [
-        "./*"
+      "#types/*": [
+        "./../shared/types/*"
       ]
     }
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    "src"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
