--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -87,6 +87,7 @@
     "jest-mock-extended": "^2.0.5",
     "prettier": "^2.3.2",
     "prisma": "^3.12.0",
+    "prisma-dbml-generator": "^0.9.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.1.4",
