[api, web-app] move interfaces to api folder, because heroku can not build it when it is outside of api root folder
[api] pass UsersModule to providers in RiddleService because of DI

[api] change test file extension from "test" to "spec"
- because Nest CLI generates test with *.test.ts name

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,7 +38,7 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".*\\.test\\.ts$",
+    "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
