--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -12,7 +12,7 @@
         "./src/*"
       ],
       "#types/*": [
-        "./../shared/types/*"
+        "./types/*"
       ]
     },
     "sourceMap": true,
@@ -25,6 +25,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "strict": true,
+    "strict": true
   }
 }
