--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Node.js CI/CD
+name: CI/CD
 
 on:
   push:
@@ -6,50 +6,22 @@ on:
   pull_request:
     branches: [ master ]
 
-concurrency: 
+concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
 
 
 jobs:
-  backend-build:
-    name: Backend build
+  backend-build-and-unit-test:
+    name: Backend build and unit test
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./apps/api
     strategy:
       matrix:
-        node-version: [16.x]
-        architecture: [x64]
-    steps:
-      - name: CHECK-OUT GIT REPOSITORY
-        uses: actions/checkout@v2
-
-      - name: USE NODEJS ${{ matrix.node-version }} - ${{ matrix.architecture }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version}}
-          cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
-
-      - name: INSTALL PROJECT DEPENDENCIES (NPM)
-        run: npm ci
-
-      - name: BUILD APPLICATION
-        run: npm run build --if-present
-
-  backend-unit-test:
-    name: Backend Unit test
-    needs: backend-build
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./apps/api
-    strategy:
-      matrix:
-        node-version: [16.x]
-        architecture: [x64]
+        node-version: [ 16.x ]
+        architecture: [ x64 ]
     steps:
       - name: CHECK-OUT GIT REPOSITORY
         uses: actions/checkout@v2
@@ -84,8 +56,8 @@ jobs:
         working-directory: ./apps/web-app
     strategy:
       matrix:
-        node-version: [14.x]
-        architecture: [x64]
+        node-version: [ 14.x ]
+        architecture: [ x64 ]
     steps:
       - name: CHECK-OUT GIT REPOSITORY
         uses: actions/checkout@v2
@@ -104,7 +76,7 @@ jobs:
         run: npm run build --if-present
 
   deploy-api:
-    needs: [backend-unit-test, frontend-build]
+    needs: [ backend-build-and-unit-test, frontend-build ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -115,7 +87,7 @@ jobs:
           heroku_email: ${{secrets.HEROKU_EMAIL}}
 
   deploy-web-app:
-    needs: [deploy-api]
+    needs: [ deploy-api ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
