[api, web-app] share api interfaces for both apps

--- a/apps/web-app/tsconfig.json
+++ b/apps/web-app/tsconfig.json
@@ -22,6 +22,9 @@
     "paths": {
       "~/*": [
         "./src/*"
+      ],
+      "@api/*": [
+        "./../api/src/interfaces/*"
       ]
     }
   },
