[api] test migration using deploy (same as in production environment)

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,7 +21,7 @@
     "test:watch": "jest --watch",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "test:ci": "dotenv -e .env.test npx prisma migrate dev --name postgres-init && dotenv -e .env.test jest",
+    "test:ci": "dotenv -e .env.test npx prisma migrate deploy && dotenv -e .env.test jest",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
