--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -59,6 +59,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.12.0",
     "argon2": "^0.28.5",
+    "aws-sdk": "^2.1128.0",
     "jsonwebtoken": "^8.5.1",
     "newrelic": "^8.9.1",
     "passport": "^0.5.2",
@@ -66,14 +67,17 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/supertest": "^2.0.11",
