[api] place suggest feature

--- a/apps/api/.env.test
+++ b/apps/api/.env.test
@@ -5,6 +5,7 @@ WEB_APP_URL="http://localhost:9000"
 
 DATABASE_URL="postgresql://prisma:prisma@localhost:5433/tests"
 
+# Auth
 AUTH_JWT_SECRET=abc123
 AUTH_JWT_ALGORITHM=HS256
 AUTH_JWT_EXPIRATION_TIME=1h
