--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -22,6 +22,7 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "strict": true
+    "strict": true,
+    "strictPropertyInitialization": false   //Nestjs DTO doesnt need to be initialized
   }
 }
