--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -60,6 +60,8 @@
     "@prisma/client": "^3.12.0",
     "argon2": "^0.28.5",
     "aws-sdk": "^2.1128.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
     "newrelic": "^8.9.1",
     "passport": "^0.5.2",
