--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --port 9000",
+    "dev": "vite --port 9000 --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src/**/*.ts src/**/*.tsx",
