--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.6.0",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
+    "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
