--- a/apps/web-app/tsconfig.json
+++ b/apps/web-app/tsconfig.json
@@ -8,7 +8,8 @@
       "ESNext"
     ],
     "allowJs": false,
-    "skipLibCheck": false,
+    // https://github.com/jaredpalmer/formik/issues/3546 https://stackoverflow.com/questions/51634361/how-to-force-tsc-to-ignore-node-modules-folder
+    "skipLibCheck": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
