--- a/apps/web-app/tsconfig.json
+++ b/apps/web-app/tsconfig.json
@@ -25,7 +25,7 @@
         "./src/*"
       ],
       "@api/*": [
-        "./../api/src/interfaces/*"
+        "./../api/src/*"
       ]
     }
   },
