--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
     "browser-image-compression": "^2.0.0",
+    "exifr": "^7.1.3",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
