--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite --port 9000 --host",
     "build": "tsc && vite build",
-    "preview": "vite preview",
+    "start": "vite preview",
     "lint": "eslint src/**/*.ts src/**/*.tsx",
     "lint:fix": "npm run lint -- --fix",
     "stylelint": "npx stylelint \"**/*.scss\"",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.0",
+    "@react-google-maps/api": "^2.10.2",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
     "browser-image-compression": "^2.0.0",
