--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.0",
+    "@heroicons/react": "^1.0.6",
     "@react-google-maps/api": "^2.10.2",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
