--- a/apps/web-app/.eslintrc
+++ b/apps/web-app/.eslintrc
@@ -48,7 +48,7 @@
     "indent": ["error", 2],
     "no-multi-spaces": "error",
     "no-trailing-spaces": "error",
-    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "quotes": ["error", "single"]
   }
