[api, web-app] shared folder for sharing types between FE and BE

--- a/apps/web-app/tsconfig.json
+++ b/apps/web-app/tsconfig.json
@@ -26,6 +26,9 @@
       ],
       "@api/*": [
         "./../api/src/*"
+      ],
+      "@shared/*": [
+        "./../shared/*"
       ]
     }
   },
