[api] shared folder with types must be in nestjs src folder - it generates other dist with nested folders - it causes problems on heroku - https://stackoverflow.com/questions/63922792/nest-js-import-files-from-outside-project-folder

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -12,7 +12,7 @@
         "./src/*"
       ],
       "@shared/*": [
-        "./../shared/*"
+        "./src/_shared/*"
       ]
     },
     "sourceMap": true,
