--- a/apps/web-app/tsconfig.json
+++ b/apps/web-app/tsconfig.json
@@ -25,7 +25,7 @@
         "./src/*"
       ],
       "@shared/*": [
-        "./../shared/*"
+        "./../api/src/_shared/*"
       ]
     }
   },
