--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -55,7 +55,6 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
     "@prisma/client": "^3.12.0",
@@ -63,11 +62,9 @@
     "aws-sdk": "^2.1128.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "jsonwebtoken": "^8.5.1",
+    "express-jwt": "^6.0.0",
+    "jwks-rsa": "^2.1.3",
     "newrelic": "^8.9.1",
-    "passport": "^0.5.2",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -83,7 +80,6 @@
     "@types/jest": "27.4.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
-    "@types/passport-google-oauth20": "^2.0.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
