--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@planetscale/database": "^1.6.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
+    "drizzle-orm": "^0.23.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "mysql2": "^3.2.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.17.3"
   }
 }
