--- a/.gitignore
+++ b/.gitignore
@@ -15,23 +15,28 @@
 # production
 /build
 
-
 # misc
 .DS_Store
+tsconfig.tsbuildinfo
 *.pem
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
-.env*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+*.db
+*.db-journal
+
+
+# testing
+playwright/test-results
