--- a/package.json
+++ b/package.json
@@ -1,28 +1,58 @@
 {
   "name": "city-hunter",
-  "version": "0.1.0",
+  "version": "10.18.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3400",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint --cache --ext \".js,.ts,.tsx\" --report-unused-disable-directives --report-unused-disable-directives src",
+    "lint-fix": "pnpm lint --fix",
+    "test": "run-s test:*",
+    "test:unit": "vitest run",
+    "test:e2e": "playwright test",
+    "test-dev": "start-server-and-test dev http://127.0.0.1:3000 test",
+    "test-start": "start-server-and-test start http://127.0.0.1:3000 test"
+  },
+  "prettier": {
+    "printWidth": 80,
+    "trailingComma": "all",
+    "singleQuote": true
   },
   "dependencies": {
-    "@planetscale/database": "^1.6.0",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.32",
-    "@types/react-dom": "18.0.11",
-    "drizzle-orm": "^0.23.5",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
-    "mysql2": "^3.2.0",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.3"
+    "@tanstack/react-query": "^4.18.0",
+    "@trpc/client": "^10.18.0",
+    "@trpc/next": "^10.18.0",
+    "@trpc/react-query": "^10.18.0",
+    "@trpc/server": "^10.18.0",
+    "clsx": "^1.1.1",
+    "next": "^13.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "superjson": "^1.7.4",
+    "zod": "^3.0.0"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.17.3"
+    "@playwright/test": "^1.26.1",
+    "@types/node": "^18.7.20",
+    "@types/react": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
+    "eslint-config-next": "^13.2.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.7",
+    "start-server-and-test": "^1.12.0",
+    "tsx": "^3.12.3",
+    "typescript": "^4.8.3",
+    "vite": "^4.1.2",
+    "vitest": "^0.28.5"
+  },
+  "publishConfig": {
+    "access": "restricted"
   }
 }
