uninstall start-server-and-test because it has lodash.clonedeep dependency which is not allowed in Edge Runtime

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": ".",
-    "types": ["vitest/globals"],
+    "types": ["vitest/globals", "@edge-runtime/types"],
     "paths": {
       "~/*": ["src/*"]
     }
