--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@edge-runtime/types": "^2.0.8",
     "@tanstack/react-query": "^4.18.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
@@ -29,7 +30,7 @@
     "next": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "superjson": "^1.7.4",
+    "superjson": "^1.12.2",
     "zod": "^3.0.0"
   },
   "devDependencies": {
@@ -46,7 +47,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.7",
-    "start-server-and-test": "^1.12.0",
     "tsx": "^3.12.3",
     "typescript": "^4.8.3",
     "vite": "^4.1.2",
