--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "dependencies": {
     "@edge-runtime/types": "^2.0.8",
+    "@planetscale/database": "^1.6.0",
     "@tanstack/react-query": "^4.18.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "clsx": "^1.1.1",
+    "drizzle-orm": "^0.23.5",
+    "mysql2": "^3.2.0",
     "next": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,6 +42,7 @@
     "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
+    "drizzle-kit": "^0.17.3",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.2.1",
     "eslint-config-prettier": "^8.5.0",
