--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test:unit": "vitest run",
     "test:e2e": "playwright test",
     "test-dev": "start-server-and-test dev http://127.0.0.1:3000 test",
-    "test-start": "start-server-and-test start http://127.0.0.1:3000 test"
+    "test-start": "start-server-and-test start http://127.0.0.1:3000 test",
+    "migration:generate": "npx drizzle-kit generate:mysql",
+    "migration:run": "npx drizzle-kit push:mysql"
   },
   "prettier": {
     "printWidth": 80,
@@ -42,7 +44,8 @@
     "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
-    "drizzle-kit": "^0.17.3",
+    "dotenv": "^16.0.3",
+    "drizzle-kit": "0.17.1-609a4f0",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.2.1",
     "eslint-config-prettier": "^8.5.0",
@@ -52,7 +55,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.7",
     "tsx": "^3.12.3",
-    "typescript": "^4.8.3",
+    "typescript": "^5.0.3",
     "vite": "^4.1.2",
     "vitest": "^0.28.5"
   },
