--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.14.2",
     "@edge-runtime/types": "^2.0.8",
     "@planetscale/database": "^1.6.0",
     "@tanstack/react-query": "^4.18.0",
@@ -39,6 +40,7 @@
     "zod": "^3.0.0"
   },
   "devDependencies": {
+    "@clerk/types": "^3.33.0",
     "@playwright/test": "^1.26.1",
     "@types/node": "^18.7.20",
     "@types/react": "^18.0.9",
