--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@trpc/server": "^10.18.0",
     "clsx": "^1.1.1",
     "drizzle-orm": "^0.23.5",
+    "jose": "^4.13.1",
     "mysql2": "^3.2.0",
     "next": "^13.2.1",
     "react": "^18.2.0",
