--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "@planetscale/database": "^1.6.0",
@@ -43,6 +44,7 @@
     "next": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "superjson": "^1.12.2",
     "zod": "^3.0.0"
   },
