--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@trpc/server": "^10.18.0",
     "clsx": "^1.1.1",
     "drizzle-orm": "^0.23.5",
+    "google-map-react": "^2.2.0",
     "jose": "^4.13.1",
     "mysql2": "^3.2.0",
     "next": "^13.2.1",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@clerk/types": "^3.33.0",
     "@playwright/test": "^1.26.1",
+    "@types/google-map-react": "^2.1.7",
     "@types/node": "^18.7.20",
     "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
