--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^1.1.1",
     "drizzle-orm": "^0.23.5",
     "google-map-react": "^2.2.0",
+    "google-maps-react-markers": "^1.2.1",
     "jose": "^4.13.1",
     "mysql2": "^3.2.0",
     "next": "^13.2.1",
