frontend upload place form ready

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-mapycz": "^1.2.0",
     "superjson": "^1.12.2",
     "zod": "^3.0.0"
   },
