--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-mapycz": "^1.2.0",
+    "styled-components": "^5.3.9",
     "superjson": "^1.12.2",
     "zod": "^3.0.0"
   },
@@ -57,6 +58,7 @@
     "@types/google-map-react": "^2.1.7",
     "@types/node": "^18.7.20",
     "@types/react": "^18.0.9",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "dotenv": "^16.0.3",
