--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@types/nprogress": "^0.2.0",
     "@vercel/analytics": "^1.0.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.29.3",
@@ -46,6 +47,7 @@
     "jose": "^4.13.1",
     "mysql2": "^3.2.0",
     "next": "^13.2.1",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
