--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@vercel/analytics": "^1.0.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.29.3",
-    "drizzle-orm": "^0.23.5",
+    "drizzle-orm": "0.23.8",
     "google-map-react": "^2.2.0",
     "google-maps-react-markers": "^1.2.1",
     "jose": "^4.13.1",
