--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mui/material": "^5.12.0",
     "@planetscale/database": "^1.6.0",
     "@tanstack/react-query": "^4.18.0",
+    "@total-typescript/ts-reset": "^0.4.2",
     "@trpc/client": "^10.25.0",
     "@trpc/next": "^10.25.0",
     "@trpc/react-query": "^10.25.0",
