--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@trpc/react-query": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "@types/nprogress": "^0.2.0",
+    "@upstash/qstash": "^0.3.6",
     "@vercel/analytics": "^1.0.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.29.3",
