--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "@planetscale/database": "^1.6.0",
+    "@sentry/nextjs": "^7.51.0",
     "@tanstack/react-query": "^4.18.0",
     "@total-typescript/ts-reset": "^0.4.2",
     "@trpc/client": "^10.25.0",
