--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jose": "^4.13.1",
     "mysql2": "^3.2.0",
     "next": "^13.2.1",
+    "next-seo": "^6.0.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
