--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "5.0.0-alpha.129",
     "@mui/material": "^5.12.0",
     "@planetscale/database": "^1.6.0",
     "@sentry/nextjs": "^7.51.0",
