--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@trpc/server": "^10.25.0",
     "@types/nprogress": "^0.2.0",
     "@upstash/qstash": "^0.3.6",
+    "@upstash/redis": "^1.20.6",
     "@vercel/analytics": "^1.0.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.29.3",
