--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jose": "^4.13.1",
     "mysql2": "^3.2.0",
     "next": "^13.2.1",
+    "next-axiom": "^0.17.0",
     "next-seo": "^6.0.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
