update drizzle and drizzle-kit

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
-    "drizzle-orm": "0.23.8",
+    "drizzle-orm": "0.26.0",
     "google-map-react": "^2.2.0",
     "google-maps-react-markers": "^1.2.1",
     "jose": "^4.13.1",
@@ -57,6 +57,7 @@
     "next-seo": "^6.0.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-mapycz": "^1.2.0",
@@ -76,7 +77,7 @@
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "dotenv": "^16.0.3",
-    "drizzle-kit": "db-push",
+    "drizzle-kit": "^0.18.0",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.2.1",
     "eslint-config-prettier": "^8.5.0",
