--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3400",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "eslint --cache --ext \".js,.ts,.tsx\" --report-unused-disable-directives --report-unused-disable-directives src",
     "lint-fix": "pnpm lint --fix",
@@ -56,6 +57,7 @@
     "next": "^13.2.1",
     "next-axiom": "^0.17.0",
     "next-seo": "^6.0.0",
+    "next-sitemap": "^4.1.3",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
