--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/lab": "5.0.0-alpha.129",
     "@mui/material": "^5.12.0",
     "@planetscale/database": "^1.6.0",
+    "@sentry/browser": "^7.53.1",
     "@sentry/nextjs": "^7.51.2",
     "@tanstack/react-query": "^4.18.0",
     "@total-typescript/ts-reset": "^0.4.2",
