replace custom assertRequiredFields.ts file for my own package required-properties

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-hook-form": "^7.43.9",
     "react-mapycz": "^1.2.0",
     "react-photo-album": "^2.1.0",
+    "required-properties": "^1.0.0",
     "styled-components": "^5.3.9",
     "superjson": "^1.12.2",
     "yet-another-react-lightbox": "^3.5.3",
