--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   "devDependencies": {
     "@clerk/types": "^3.33.0",
     "@playwright/test": "^1.26.1",
+    "@total-typescript/shoehorn": "^0.1.1",
     "@types/google-map-react": "^2.1.7",
     "@types/node": "^18.7.20",
     "@types/react": "^18.0.9",
